fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 }
 
 body {
+  overflow-x: hidden;
   width: 100%;
   display: flex;
   flex-direction: column;
